<resources>
    <string name="app_name">INZ4G</string>
    <string name="login">登录</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="verification">用户名和密码不能为空</string>
    <string name="account_error">帐户不存在</string>
    <string name="password_error">密码错误</string>
    <string name="login_fail">登录失败</string>
    <string name="login_error">网络信号弱，请稍后登录</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="login_server_select">服务器:</string>
    <string name="home_setting_like">喜欢</string>
    <string name="home_setting_help">帮助</string>
    <string name="home_setting_search">查询</string>
    <string name="home_setting_scope">范围</string>
    <string name="home_setting_set">设置</string>
    <string name="home_setting_unread">未读</string>
    <string name="home_setting_read">已读</string>
    <string name="home_setting_read_all">全部</string>
    <string name="camera_list_wifi_intensity">信号强度：</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="not_online">不在线</string>
    <string name="not_online_message">离线设备，无法打开</string>
    <string name="home_fragment_devices">设备</string>
    <string name="home_fragment_medias">图片</string>
    <string name="home_fragment_notice">Notice</string>
    <string name="loacl_file_activity_no_iamge_bg">暂无文件</string>
    <string name="share_pic">分享图片</string>
    <string name="big_image_activity_dialog_title_remove">删除</string>
    <string name="big_image_activity_dialog_message">删除这张照片？</string>
    <string name="big_image_activity_dialog_yes_button_name">确定</string>
    <string name="big_image_activity_dialog_no_button_name">取消</string>
    <string name="save_picture">图像已保存到/eCamera目录下</string>
    <string name="play_play_error_msg_title">播放失败</string>
    <string name="play_play_error_msg_msg">播放失败，wifi信号弱，请稍后尝试</string>
    <string name="popup_window_hd">高清</string>
    <string name="popup_window_sd">标清</string>
    <string name="no_estore">设备没有插入SD卡</string>
    <string name="no_sdcard">请先插入SD卡</string>

    <string name="vod_last_page">现在已经是最后一页了</string>
    <string name="select_date">选择时间</string>
    <string name="vod_page_error">获取数据失败</string>
    <string name="server_setting_title">服务器设置</string>
    <string name="add_ap_port_error">需要输入数字</string>
    <string name="reg_field_empty">不能为空</string>
    <string name="add_ap_ip_error">输入不符合IP格式域名格式</string>
    <string name="camera_setting_save_title">保存设置</string>
    <string name="camera_setting_save_msg">正在保存...</string>
    <string name="server_setting_ip_title">服务器IP或域名:</string>
    <string name="server_setting_ip">输入服务器的IP或域名</string>
    <string name="server_setting_port_title">服务器端口:</string>
    <string name="server_setting_port">输入服务器的端口</string>
    <string name="server_setting_ssl">服务器使用SSL</string>
    <string name="server_setting_default">默认</string>
    <string name="server_setting_btn">保存</string>
    <string name="server_setting_t_ip_title">流转服务器IP：</string>
    <string name="server_setting_t_ip">输入流转服务器IP</string>
    <string name="server_setting_t_port_title">流转服务器端口：</string>
    <string name="server_setting_t_port">流转服务器端口</string>
    <string name="server_setting_record_stream">回放码流</string>
    <string name="server_setting_save_exit_title">保存和退出</string>
    <string name="server_setting_save_exit_msg">您尚未保存！是否要保存?</string>
    <string name="server_setting_save_exit_ok">保存</string>
    <string name="server_setting_save_exit_no">退出</string>



    <string name="login_use_custom">自定义服务器?</string>
    <string name="login_server">www.haoweis.com:8850</string>


    <string name="camera_play_back">回放</string>
    <string name="camera_play_view">点击进入</string>
    <string name="camera_online">在线</string>
    <string name="camera_offline">离线</string>

</resources>
